# auth-server

./: .env.dist  .gitignore  README.md  config.example.toml  pyproject.toml
docs/: schema.drawio
src/: accounts.py  app.py  authenticator.py  config.py  dodo.py  dodo_account.py  exceptions.py  main.py  models.py  redis_db.py  security.py  update_cookies.py  update_tokens.py  utils.py
src/api/: accounts.py  dependencies.py  errors.py
src/api/routers/: __init__.py  accounts.py  auth_credentials.py  healthcheck.py
src/api/schemas/: __init__.py  accounts.py  auth_credentials.py
src/database/: engine.py
src/database/models/: accounts.py  auth_credentials.py
src/db/: __init__.py  local_storage.py  mongo_db.py  redis_db.py
src/external_api_services/: __init__.py  auth_service.py  database_service.py
src/repositories/: __init__.py  accounts.py  cookies.py  tokens.py
