[tool.poetry]
name = "dodo-auth"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
environs = "^9.5.0"
requests = "^2.27.1"
cryptography = "^37.0.3"
pymongo = "^4.1.1"
dnspython = "^2.2.1"
dodo-lib-usbtypec1 = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
